Fixed issues with comments covering clicks

--- a/src/features/media/media.scss
+++ b/src/features/media/media.scss
@@ -132,6 +132,7 @@
   .comment-position{
       padding-top: 90rem;
       position: relative;
+      z-index: -1;
   }
 
   .comment-header {
